--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
             android:text="Решить"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" android:onClick="clc"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" android:onClick="clc"
+            app:layout_constraintBottom_toTopOf="@+id/bannerAdView"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,15 +47,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/button"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white" android:textSize="16sp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white" android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/bannerAdView"/>
     <Button
             android:text="Узнать"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button2"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:onClick="inf"/>
+            app:layout_constraintEnd_toEndOf="parent" android:onClick="inf"
+            app:layout_constraintBottom_toTopOf="@+id/bannerAdView"/>
     <TextView
             android:text="Ответ:"
             android:layout_width="wrap_content"
@@ -68,5 +70,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent" />
+
+    <com.yandex.mobile.ads.banner.BannerAdView
+            android:id="@+id/bannerAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
